# poly_value

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-macos.yml  cmake-multi-platform.yml  cmake-ubuntu.yml  cmake-windows.yml
examples/: examples.cpp
include/poly_value/: poly_value.hpp
tests/: CMakeLists.txt  tests.cpp
